# quarry-kb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ISA.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quarry.toml
src/quarry/: __init__.py  __main__.py  cli.py  config.py  discovery.py  errors.py  finish.py  frontmatter.py  git.py  ingest.py  lint.py  manifest.py  store.py  transcribe.py
src/quarry/adapters/: __init__.py  base.py  github.py  instagram.py  pdf.py  reddit.py  registry.py  web.py  youtube.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_config_matrix.py  test_discovery.py  test_doctor.py  test_finish.py  test_frontmatter.py  test_git.py  test_ingest.py  test_init.py  test_invariants.py  test_lint.py  test_manifest.py  test_new_adapters.py  test_packaging.py  test_store.py
tests/fixtures/: lint_report.golden.txt
tests/fixtures/lint_store/: quarry.toml
tests/fixtures/lint_store/raw/: exists.md
tests/fixtures/lint_store/wiki/: index.md
tests/fixtures/lint_store/wiki/ai/: alpha.md  beta.md
tests/fixtures/lint_store/wiki/misc/: gamma.md
